syntax = "proto3";

option java_package = "com.derbysoft.nuke.dlm.model";
option java_outer_classname = "Protobuf";

message RegisterRequest {
    string resourceId = 1;
    string permitName = 2;
    string permitSpec = 3;
}

message RegisterResponse {
    string resourceId = 1;
    string errorMessage = 2;
    bool successful = 3;
}

message UnRegisterRequest {
    string resourceId = 1;
}

message UnRegisterResponse {
    string resourceId = 1;
    string errorMessage = 2;
    bool successful = 3;
}

message ExistingRequest {
    string resourceId = 1;
}

message ExistingResponse {
    string resourceId = 1;
    string errorMessage = 2;
    bool existing = 3;
}

message AcquireRequest {
    string resourceId = 1;
}

message AcquireResponse {
    string resourceId = 1;
    string errorMessage = 2;
}

message TryAcquireRequest {
    string resourceId = 1;
    int64 timeout = 2;
    enum TIME_UNIT {
        DAYS = 0;
        HOURS = 1;
        MICROSECONDS = 2;
        MILLISECONDS = 3;
        MINUTES = 4;
        NANOSECONDS = 5;
        SECONDS = 6;
    }
    TIME_UNIT timeUnit = 7;
}

message TryAcquireResponse {
    string resourceId = 1;
    string errorMessage = 2;
    bool successful = 3;
}

message ReleaseRequest{
    string resourceId = 1;
}

message ReleaseResponse {
    string resourceId = 1;
    string errorMessage = 2;
}

message Request {
    enum RequestType {
        REGISTER_REQUEST = 0;
        UNREGISTER_REQUEST = 1;
        EXISTING_REQUEST = 2;
        ACQUIRE_REQUEST = 3;
        TRY_ACQUIRE_REQUEST = 4;
        RELEASE_REQUEST = 5;
    }

    RequestType type = 1;
    RegisterRequest registerRequest = 2;
    UnRegisterRequest unRegisterRequest = 3;
    ExistingRequest existingRequest = 4;
    AcquireRequest acquireRequest = 5;
    TryAcquireRequest tryAcquireRequest = 6;
    ReleaseRequest releaseRequest = 7;
}

message Response {
    enum ResponseType {
        REGISTER_RESPONSE = 0;
        UNREGISTER_RESPONSE = 1;
        EXISTING_RESPONSE = 2;
        ACQUIRE_RESPONSE = 3;
        TRY_ACQUIRE_RESPONSE = 4;
        RELEASE_RESPONSE = 5;
    }

    ResponseType type = 1;
    RegisterResponse registerResponse = 2;
    UnRegisterResponse unRegisterResponse = 3;
    ExistingResponse existingResponse = 4;
    AcquireResponse acquireResponse = 5;
    TryAcquireResponse tryAcquireResponse = 6;
    ReleaseResponse releaseResponse = 7;

}